# django-team-events

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
django_team_events/: __init__.py  apps.py  config.py  formatter.py  signals.py  team_events.py
django_team_events/providers/: google_chat.py
docs/: architecture.md  roadmap.md  specification.md  tdd.md
tests/: conftest.py  test_create_event.py  test_delete_event.py  test_field_filtering.py  test_templates.py  test_update_event.py
