[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-team-events"
version = "0.1.0"
description = "Lightweight Django package for real-time team notifications on model events."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Syed Haris" }
]

dependencies = [
  "Django>=3.2",
  "requests>=2.28"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 3",
  "Framework :: Django :: 4",
  "Framework :: Django :: 5",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/syedmharis/django-team-events"
Issues = "https://github.com/syedmharis/django-team-events/issues"